fix: 1등 상금액 타입 변경